--- a/WebCycleManager/Views/GameCompetitorEvents/Delete.cshtml
+++ b/WebCycleManager/Views/GameCompetitorEvents/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Verwijder/h1>
+<h1>Verwijder</h1>
 
 <h3>Weet je zeker dat je deze deelnemer wilt verwijderen?</h3>
 <div>
